@@ -3,6 +3,9 @@
   * Added D8 as the next generation date object in JavaScript (M.Date remains, but will no longer be maintained)
   * Fixed a bug in M.LocationManager
   * Updated JQM to 1.0b2
+  * Added changeTitle() to M.LoaderView
+  * Fixed a bug in style() with the disabled-property
+  * Fixed a bug in styleUpdate(), since disabled-property lead to problems with autogrow mechanism
 
 ** Version 0.6 - Date 21.07.2011 **
 
